--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,7 @@
 body {
   height: 100vh;
   overflow: hidden;
-  background: linear-gradient(
-    90deg,
-    rgba(33, 78, 255, 1) 0%,
-    rgba(207, 236, 255, 1) 100%
-  );
-}
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+margin: 0px;
 }
 .container {
   display: flex;
@@ -81,8 +71,9 @@ form {
 }
 /* Home page style*/
 .homeContainer {
-  background-color: rgb(255, 250, 245);
-  width: 80%;
+  background-color: rgb(177, 188, 253);
+  width: 90%;
   display: flex;
   margin: auto;
+  flex-direction: column;
 }
