--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@ margin: 0px;
 .container {
   display: flex;
   flex-direction: row;
-}
+  padding: 100px;
+    }
 .register {
   box-shadow: 1px -1px 51px -13px rgba(0, 0, 0, 0.46);
   -webkit-box-shadow: 1px -1px 51px -13px rgba(0, 0, 0, 0.46);
@@ -59,7 +60,6 @@ form {
 .errorMsg {
   max-width: 350px;
   color: #f21e08;
-  padding: 2px 0;
   margin-top: 2px;
   font-size: 14px;
   font-weight: 300;
@@ -77,3 +77,16 @@ form {
   margin: auto;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 768px) {
+
+  body {
+  height: 100vh;
+  overflow: hidden;
+margin: 0px;
+}
+  .container {
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 100px;
+}}
