--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ label {
 #title {
   color: rgb(247, 251, 255);
 }
-p {
+#text {
   font-family: cursive;
   font-size: 1.2rem;
   color: rgb(247, 251, 255);
