--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,8 +1,10 @@
-.homepage{
-    margin: 2rem;
-    margin-top: -0.5rem;
-    display: flex;
-    flex-direction: column;
-   
+.homepage {
+  margin: 2rem;
+  margin-top: -0.5rem;
+  display: flex;
+  flex-direction: column;
+
 }
-body{background-color: #0d1b2a;}
+body {
+  background-color: #0d1b2a;
+}
