--- a/src/components/profile-info.module.css
+++ b/src/components/profile-info.module.css
@@ -11,9 +11,7 @@
 
 .profilePicture {
   display: block;
-  margin-left: auto;
-  padding-top: 20px;
-  margin-right: auto;
+  margin-left: auto;  margin-right: auto;
   width: 25%;
 }
 .infoContainer {
