--- a/src/pages/loading.module.css
+++ b/src/pages/loading.module.css
@@ -2,9 +2,9 @@
   --background: #62abff;
   --front-color: #4f29f0;
   --back-color: #c3c8de;
-  --text-color: #414856;
+  --text-color: #e0e1dd;
   width: 100%;
-  height: 150%;
+  height: 90dvh;
   border-radius: 50px;
   position: relative;
   display: flex;
@@ -90,13 +90,13 @@
 
 #wifi-loader .text {
   position: absolute;
-  bottom: -10px;
+  bottom: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
   text-transform: lowercase;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
   letter-spacing: 0.2px;
 }
 
