add basic UIs elements to UserProfile component

--- a/src/components/ProfilInfo.module.css
+++ b/src/components/ProfilInfo.module.css
@@ -11,7 +11,8 @@
 
 .profilePicture {
   display: block;
-  margin-left: auto;  margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 25%;
 }
 .infoContainer {
@@ -20,8 +21,8 @@
   flex-direction: column;
 }
 .info {
- font-family: cursive;
-margin: auto auto;
+  font-family: cursive;
+  margin: auto auto;
   font-size: 1rem;
-  color: rgb(247, 251, 255)
+  color: rgb(247, 251, 255);
 }
